# fesch

./: .gitignore  Agent.md  Makefile  README.md  Task.md  commit.bat  fesch.bat  push-main.bat  push.bat  pyproject.toml
brain/: __init__.py  agent.py  model_router.py
brain/plugins/: README.md
brain/skills/: README.md
brain/skills/multi_agent/: __init__.py
brain/tools/: __init__.py  file_system.py  pc_control.py  scheduler_ipc.py  web_automation.py  web_search.py
config/: agent.toml  models.toml  schedule.toml
core/: Cargo.toml
core/src/: engine.rs  main.rs  memory.rs  model_router.rs  plugin_loader.rs  scheduler.rs
core/src/ffi/: cpp_bridge.rs
core/src/tui/: layout.rs  mod.rs  multi_agent.rs  theme.rs  widgets.rs
native/: CMakeLists.txt
native/src/: bridge.h  pc_control.cpp
