[package]
name = "agent_core"
version = "0.1.0"
edition = "2021"
description = "Polyglot AI Agent Core Engine"

[dependencies]
# TUI
ratatui = "0.26"
crossterm = "0.27"

# Python bridge (0.23+ for Python 3.13 support)
pyo3 = { version = "0.23", features = ["auto-initialize"] }

# Async runtime
tokio = { version = "1.37", features = ["full"] }
tokio-cron-scheduler = "0.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# FFI
libc = "0.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

[build-dependencies]
pyo3-build-config = "0.23"
